[package]
name = "kudi_sdk"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Obiabo"]
description = "A fast, simple, and easy-to-work-with Rust SDK for Kudi, send SMS without the hassle."


[dependencies]
reqwest = { version = "0.12.15" , features = ["json"]}
tokio =  { version = "1.44.2" , features = ["full"]}
serde_json = "1.0.140"
serde = { version = "1.0.219" , features = ["serde_derive"]}