[package]
name = "kudi_sdk"
version = "0.1.0"
edition = "2021"
authors = ["Emmanuel Obiabo"]
description = "A lightweight and developer-friendly Rust SDK for Kudi, designed to simplify SMS delivery with speed and reliability."

[dependencies]
reqwest = { version = "0.12.15" , features = ["json"]}
tokio =  { version = "1.44.2" , features = ["full"]}
serde_json = "1.0.140"
serde = { version = "1.0.219" , features = ["serde_derive"]}
urlencoding = "2.1.3"