[package]
name = "plunk"
version = "0.1.2"
edition = "2021"
description = "A fast, simple, and easy-to-work-with Rust SDK for Plunk — send emails without the hassle."
license = "MIT"
repository = "https://github.com/yhoungdev/manifold/tree/main/crates/plunk"
authors = ["Emmanuel Obiabo"]
categories = ["email" , "asynchronous" , "api-bindings"]


[dependencies]


serde = {version = "1.0.219" , features = ["derive"]}
tokio = {version = "1.44.2" , features = ["full"]}
reqwest = { version = "0.12.15", features = ["json"] }
dotenv = "0.15.0"
common_manifold = "0.1.0"
